GNOME Bugzilla – Bug 669822
[PATCH] Fix possible memory leak in gedit_metadata_manager_get()
Last modified: 2012-02-10 17:31:00 UTC
In gedit_metadata_manager_get(), `uri` needs to be freed before returning.
Created attachment 207279 [details] [review] Fix
Review of attachment 207279 [details] [review]: Looks good.