Fix possible memory leak

In gedit_metadata_manager_get(), `uri` needs to be freed before returning.

https://bugzilla.gnome.org/show_bug.cgi?id=669822